--- a/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeEdit.html
@@ -146,7 +146,7 @@
                     restSubmit(method, url, data);
                 }
             } else if (method === 'delete') {
-                aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'');
+                zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/cmdb/attributes/' + /*[[${attribute?.attributeId}]]*/'');
             }
         }
 
@@ -160,26 +160,26 @@
                     if (method === 'post' || method === 'put') {
                         switch (response.responseText) {
                             case STATUS_SUCCESS:
-                                aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
+                                zAlert.success(i18n.msg('common.msg.save'), function () {
                                     location.href = '/cmdb/attributes/search';
                                 });
                                 break;
                             case STATUS_ERROR_CMDB_ATTRIBUTE_NAME_DUPLICATION:
-                                aliceAlert.alertSuccess(i18n.msg('cmdb.attribute.msg.attributeNameUsed'));
+                                zAlert.success(i18n.msg('cmdb.attribute.msg.attributeNameUsed'));
                                 break;
                             default :
-                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                                zAlert.danger(i18n.msg('common.msg.fail'));
                                 break;
                         }
                     } else if (method === 'delete'){
                         switch (response.responseText) {
                             case STATUS_SUCCESS:
-                                aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
+                                zAlert.success(i18n.msg('common.msg.delete'), function () {
                                     location.href = '/cmdb/attributes/search';
                                 });
                                 break;
                             default:
-                                aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                                zAlert.danger(i18n.msg('common.msg.fail'));
                                 break;
                         }
                     }
