--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -65,7 +65,7 @@
 
         // fileTemplate가 동적으로 생기고 존재여부로 파일 업로드를 체크하기 때문에 isEmpty 함수를 사용하기 어려움.
         if (document.getElementById('dropZoneFileUpload') !== null && document.getElementById('fileTemplate') === null) {
-            aliceAlert.alertWarning(i18n.msg('form.msg.selectImportFile'));
+            zAlert.warning(i18n.msg('form.msg.selectImportFile'));
             return false;
         }
         return true;
@@ -84,7 +84,7 @@
                 formInfo.id = formId;
                 formInfo.status = isDestroy ? STATUS_DESTROY : document.getElementById('form_status').value;
                 isEditable ? restSubmit('PUT', '/rest/forms/' + formId, formInfo)
-                    : aliceAlert.alertWarning(i18n.msg('form.msg.failedDestroy'));
+                    : zAlert.warning(i18n.msg('form.msg.failedDestroy'));
 
             }
         }
@@ -92,13 +92,13 @@
 
     // 폼 삭제
     function deleteForm(formId) {
-        aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/forms/' + formId, function(result) {
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/forms/' + formId, function(result) {
             if (result === 'true') {
-                aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function() {
+                zAlert.success(i18n.msg('common.msg.delete'), function() {
                     location.reload();
                 });
             } else {
-                aliceAlert.alertDanger(i18n.msg('form.msg.failedFormDelete'));
+                zAlert.danger(i18n.msg('form.msg.failedFormDelete'));
             }
         });
     }
@@ -257,7 +257,7 @@
             contentType: 'application/json',
             callbackFunc: function (response) {
                 if (response.responseText === STATUS_ERROR_DUPLICATE_FORM_NAME) {
-                    aliceAlert.alertWarning(i18n.msg('form.msg.duplicateFormName'));
+                    zAlert.warning(i18n.msg('form.msg.duplicateFormName'));
                     return false;
                 }
                 if (method === 'POST') {
@@ -319,12 +319,12 @@
             };
             ZWorkflowUtil.import(importFile, formInfo, 'form', function (result) {
                 if (result) {
-                    aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
+                    zAlert.success(i18n.msg('common.msg.save'), function () {
                         location.reload();
                     });
                     return true;
                 } else {
-                    aliceAlert.alertDanger(i18n.msg('common.label.fail'));
+                    zAlert.danger(i18n.msg('common.label.fail'));
                     return false;
                 }
             });
