--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -232,7 +232,7 @@
     }
 
     function deleteNotice() {
-        aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/notices/' + [[${notice?.noticeNo}]]);
+        zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/notices/' + [[${notice?.noticeNo}]]);
     }
 
     function restSubmit(method, url, data) {
@@ -243,19 +243,19 @@
             contentType: 'application/json',
             callbackFunc: function() {
                 if (method === 'post') {
-                    aliceAlert.alertSuccess(i18n.msg('common.msg.register'), function () {
+                    zAlert.success(i18n.msg('common.msg.register'), function () {
                         window.location.href = '/notices/search';
                     });
                 } else if (method === 'put') {
-                    aliceAlert.alertSuccess(i18n.msg('common.msg.modify'), function () {
+                    zAlert.success(i18n.msg('common.msg.modify'), function () {
                         window.location = '/notices/search';
                     });
                 } else if (method === 'delete') {
-                    aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
+                    zAlert.success(i18n.msg('common.msg.delete'), function () {
                         window.location = '/notices/search';
                     });
                 } else {
-                    aliceAlert.alertWarning(i18n.msg('common.msg.fail'));
+                    zAlert.warning(i18n.msg('common.msg.fail'));
                 }
             }
         };
