--- a/src/main/resources/public/template/notice/noticeView.html
+++ b/src/main/resources/public/template/notice/noticeView.html
@@ -57,7 +57,7 @@
         // 게시물 삭제 처리 시, validation 체크.
         const noticeNo = /*[[${notice.noticeNo}]]*/;
         if (noticeNo === null) {
-            aliceAlert.alertWarning(i18n.msg('notice.msg.alreadyDeleted'));
+            zAlert.warning(i18n.msg('notice.msg.alreadyDeleted'));
             return history.go(-1);
         }
         zFileUploader.init({formId: 'frm', ownId: noticeNo, editor: false, isView: true});
