--- a/src/main/resources/public/template/scheduler/schedulerEdit.html
+++ b/src/main/resources/public/template/scheduler/schedulerEdit.html
@@ -310,7 +310,7 @@
                 restSubmit(method, url, data);
             }
         } else if (method === 'delete') {
-            aliceAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'');
+            zAlert.confirm(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/schedulers/' + /*[[${schedule?.taskId}]]*/'');
         }
     }
 
@@ -352,44 +352,44 @@
                 if (method === 'post' || method === 'put') {
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
-                            aliceAlert.alertSuccess(i18n.msg('common.msg.save'), function () {
+                            zAlert.success(i18n.msg('common.msg.save'), function () {
                                 location.href = '/schedulers/search';
                             });
                             break;
                         case STATUS_ERROR_SCHEDULE_USED:
-                            aliceAlert.alertWarning(i18n.msg('scheduler.msg.useSchedule'));
+                            zAlert.warning(i18n.msg('scheduler.msg.useSchedule'));
                             break;
                         case STATUS_ERROR_SCHEDULE_NAME_DUPLICATION:
-                            aliceAlert.alertWarning(i18n.msg('scheduler.msg.duplicateTaskName'));
+                            zAlert.warning(i18n.msg('scheduler.msg.duplicateTaskName'));
                             break;
                         default :
-                            aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                            zAlert.danger(i18n.msg('common.msg.fail'));
                             break;
                     }
                 } else if (method === 'execute') {
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
-                            aliceAlert.alertSuccess(i18n.msg('common.msg.success'));
+                            zAlert.success(i18n.msg('common.msg.success'));
                             break;
                         case STATUS_ERROR_SCHEDULER_EXECUTE:
-                            aliceAlert.alertWarning(i18n.msg('common.msg.fail'));
+                            zAlert.warning(i18n.msg('common.msg.fail'));
                             break;
                         default:
-                            aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                            zAlert.danger(i18n.msg('common.msg.fail'));
                             break;
                     }
                 } else if (method === 'delete'){
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
-                            aliceAlert.alertSuccess(i18n.msg('common.msg.delete'), function () {
+                            zAlert.success(i18n.msg('common.msg.delete'), function () {
                                 location.href = '/schedulers/search';
                             });
                             break;
                         case STATUS_ERROR_SCHEDULE_USED:
-                            aliceAlert.alertWarning(i18n.msg('scheduler.msg.useSchedule'));
+                            zAlert.warning(i18n.msg('scheduler.msg.useSchedule'));
                             break;
                         default:
-                            aliceAlert.alertDanger(i18n.msg('common.msg.fail'));
+                            zAlert.danger(i18n.msg('common.msg.fail'));
                             break;
                     }
                 }
