--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -264,31 +264,31 @@
             callbackFunc: function (response) {
                 switch (response.responseText) {
                     case STATUS_SUCCESS:
-                        aliceAlert.alertSuccess([[#{user.msg.createUser}]], function () {
+                        zAlert.success([[#{user.msg.createUser}]], function () {
                             window.location.reload();
                         });
                         break;
                     case STATUS_SUCCESS_EDIT_ADMIN:
-                        aliceAlert.alertSuccess([[#{common.msg.modify}]], function () {
+                        zAlert.success([[#{common.msg.modify}]], function () {
                             window.location.reload();
                         });
                         break;
                     case STATUS_SUCCESS_EDIT_EMAIL:
-                        aliceAlert.alertSuccess([[#{user.msg.emailWithUpdate}]], function () {
+                        zAlert.success([[#{user.msg.emailWithUpdate}]], function () {
                             window.location.reload();
                         });
                         break;
                     case STATUS_SUCCESS_EDIT_PASSWORD:
-                        aliceAlert.alertSuccess([[#{user.msg.resetPassword}]]);
+                        zAlert.success([[#{user.msg.resetPassword}]]);
                         break;
                     case STATUS_ERROR_USER_ID_DUPLICATION:
-                        aliceAlert.alertWarning([[#{user.msg.sameUserId}]]);
+                        zAlert.warning([[#{user.msg.sameUserId}]]);
                         break;
                     case STATUS_ERROR_EMAIL_DUPLICATION:
-                        aliceAlert.alertWarning([[#{user.msg.sameEmail}]]);
+                        zAlert.warning([[#{user.msg.sameEmail}]]);
                         break;
                     default:
-                        aliceAlert.alertDanger([[#{common.msg.fail}]]);
+                        zAlert.danger([[#{common.msg.fail}]]);
                         break;
                 }
             }
